4.0.3 2020xxxx
  BF: Template Preview Properties: Correction of the logic during parsing
  BF: JUnit: Cleanup of JUnit4

4.0.2 20200711
  BF: Generator: Correction of expensive/hungry RegExp
  BF: Template: Correction of expensive/hungry RegExp

4.0.1 20200709
  BF: Template: Correction of Unicode support
      better support / correction e.g. for Japanese and Korean

4.0.0 20200704
  BF: Generator: Correction of errors due to duplicate map entries
      Occurs when the map entries are made case-insensitive.
  BF: Service Render: Correction of errors if the template contains no header and no footer
  BF: Service Multiplex: Correction of the error-causing indentation of XML documents
  BF: Template Generate: Correction of errors due to duplicate map entries
      Occurs when the map entries are made case-insensitive.
  CR: Compare: Integral part of the API and PDF Tools
      PDF Tools: Compare, Designer, Preview
  CR: Compare: Optimization of the output of differences
      - Gray: the original / no difference
      - Blue: only in the compare
      - Green: only in the master
      - Yellow: nowhere (overlapping)
      - Red: difference between master and compare
  CR: PDF Tools: Integrated as standalone Java application
          usage:
      java -cp seanox-pdf-tools.jar com.seanox.pdf.Compare <master> <compare>
      java -cp seanox-pdf-tools.jar com.seanox.pdf.Designer <paths/filters/globs> ...
      java -cp seanox-pdf-tools.jar com.seanox.pdf.Preview <paths/filters/globs> ...
  CR: Service Meta: Added more variants of the constructor
  CR: Service Meta Static: Update to use Map<String, String> instead of Map<String, CharSequence>
  CR: Template Scan: Omission of final attribute in the access modifier
  CR: Template Render: Omission of final attribute in the access modifier
      Enables the preparation/customization of the meta object before rendering.